Fixed CodeMirror overflowing slightly due to border

--- a/frontend/src/app/common/components/code-mirror/code-mirror.component.scss
+++ b/frontend/src/app/common/components/code-mirror/code-mirror.component.scss
@@ -1,6 +1,7 @@
 :host ::ng-deep {
   & .CodeMirror {
     border: thin solid #ddd;
+    box-sizing: border-box;
   }
 
   & .CodeMirror * {
